sysvinit (2.89dsf) UNRELEASED; urgency=low

  [ Werner Fink ]
  * Allow init to delte extra environment variables (was local bug
    #35858)
  * Avoid that init double environment variables for its childs
    (was local bug #35855)
  * Remove man-db tag for encoding for canonical man
  * Sulogin: try to detect the real device(s) used for the system console
    /dev/console if but only if /dev/console is used.  On Linux this can
    be more than one device, e.g. a serial line as well as a virtual
    console as well as a simple printer.
  * Fix counting message lines in wall. Patch from Petr Lautrbach.
  * Fix bad printf conversion specifier in wall. Patch from Sébastien Luttringer.
  * Add patches from Openwall project. Thanks goes to Solar Designer.
  * Add code to detect the system consoles with the help of the
    new /proc/consoles files of linux kernel 2.6.38+
  * Try to make utmpdump IPv6 valid, change based on suggestion from
    Navdeep Bhatia (see local bug #32429)
  * Fix signal and alarm handling based on the patch from Florent Viard.
    (was local bug #32304)
  * Add fix for Redhat bug #573346: last incorrectly displays IPv6
    addresses (was local bug #29497)
  * Correct fix for Debian bug #547073: use IUTF8 flag if defined
    and if already set to make sure the utf-8 flag is not cleared
    from the tty. Patch from Samuel Thibault.
  * Include limits.h in killall.c to enforce definition of PATH_MAX
  * Fix sysvinit bug #29758 Linker invocation should not contain
    headers. Change based on patch from Elias Pipping.
  * Add fix for Debian bug #580272: use return value 1 of
    is_selinux_enabled() to determine if SELinux is enabled,
    otherwise initialize SELinux and load the policy. Patch from
    Petter Reinholdtsen.
  * Make quotes visible in example of the manual page of fstab-decode
  * Sulogin: enforce reconnection of stdin/stdout/stderr if a device
    was specified.
  * Sulogin: if zero is read at reading the passwd guess it's done.